yamls/1-Storage/0-secrets.yml
# Deploys a new Namespace for the MinIO Pod
apiVersion: v1
kind: Namespace
metadata:
  name: buildspace-storage
  labels:
    name: buildspace-storage
