yamls/1-Storage/1-meta-db.yml
---
apiVersion: v1
kind: Service
metadata:
  name: mongodb-service
  namespace: buildspace-storage
spec:
  type: LoadBalancer
  ports:
    - port: 27017
      targetPort: 27017
  selector:
    app: mongo-database
---
kind: Deployment
apiVersion: apps/v1
metadata:
  name: mongodb-deployemnt
  namespace: buildspace-storage
spec:
  selector:
    matchLabels:
      app: mongo-database
  strategy:
    type: Recreate
  template:
    metadata:
      name: mongo-database
      labels:
        app: mongo-database
    spec:
      containers:
      - name: mongo-database
        image: mongo:4.2
        ports:
        - containerPort: 27017
        volumeMounts:
        - name: data-mongo-storage
          mountPath: /data/db
      volumes:
      - name: data-mongo-storage
        persistentVolumeClaim:
          claimName: data-mongo-claim
        # env:
        # - name: MONGO_INITDB_ROOT_USERNAME
        #   valueFrom:
        #     secretKeyRef:
        #       name: secret-mongo
        #       key: username
        # - name: MONGO_INITDB_ROOT_PASSWORD
        #   valueFrom:
        #     secretKeyRef:
        #       name: secret-mongo
        #       key: password
