yamls/1-Storage/3-storage-api.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: storage-api-app
  namespace: buildspace-storage
  labels:
    app: storage-api-app
spec:
  replicas: 3
  template:
    metadata:
      name: storage-api-app
      labels:
        app: storage-api-app
    spec:
      containers:
        - name: storage-api
          image: buildspace/storage-api
          ports:
            - containerPort: 8006
#          imagePullPolicy: IfNotPresent
      restartPolicy: Always
  selector:
    matchLabels:
      app: storage-api-app
---
kind: Service
apiVersion: v1
metadata:
  name: storage-api
  namespace: buildspace-storage
spec:
  selector:
    app: storage-api-app
  ports:
  - protocol: TCP
    port: 80
    targetPort: 30000
---
#apiVersion: v1
#kind: Service
#metadata:
#  name: storage-api-service
#  namespace: buildspace-storage
#spec:
#  selector:
#    app: storage-api-app
#  ports:
#    - protocol: TCP
#      port: 8006
#      targetPort: 8006
#  type: NodePort
---
#apiVersion: v1
#kind: Service
#metadata:
#  name: storage-api-service
#  namespace: buildspace-storage
#spec:
#  selector:
#    app: storage-api-app
#  ports:
#    - port: 8006
#      name: api
#  type: ClusterIP
