yamls/1-Storage/4-ingresses.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: minio-ingress
  namespace: buildspace-storage
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.org/client-max-body-size: "10m"
    nginx.ingress.kubernetes.io/proxy-body-size: "10m"
spec:
  rules:
  - host: minio-dataspaces.euinno.eu
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: minio
            port:
              number: 9090
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: api-minio-ingress
  namespace: buildspace-storage
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.org/client-max-body-size: "10m"
    nginx.ingress.kubernetes.io/proxy-body-size: "10m"
spec:
  rules:
  - host: minioapi-dataspaces.euinno.eu
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: minio
            port:
              number: 9000
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: api-core-ingress
  namespace: buildspace-storage
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.org/client-max-body-size: "10m"
    nginx.ingress.kubernetes.io/proxy-body-size: "10m"
spec:
  rules:
  - host: api-dataspaces.euinno.eu
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: storage-api
            port:
              number: 80
